--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "myflix-client",
   "version": "1.0.0",
-  "scripts": {
+  "Testing VSCODE""scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
