--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+    
   },
   "keywords": [],
   "author": "",
@@ -14,7 +15,7 @@
     "react": "^19.0.0",
     "react-bootstrap": "2.5.0",
     "react-bootstrap-validation": "^0.1.11",
-    "react-dom": "^19.0.0",
+    "react-router": "^7.3.0",
     "react-scripts": "^5.0.1"
   },
   "devDependencies": {
