--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-bootstrap": "2.5.0",
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^19.1.0",
-    "react-router": "^7.3.0",
+    "react-router": "^6.17.0",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "^3.0.1"
   },
   "devDependencies": {
